--- a/presentation/controls.html
+++ b/presentation/controls.html
@@ -16,7 +16,7 @@
 
         <link rel="stylesheet" href="css/reveal.css">
          <link rel="stylesheet" href="css/screen.css">
-        <link rel="stylesheet" href="css/theme/beige.css" id="theme">
+        <link rel="stylesheet" href="css/theme/embark.css" id="theme">
 
 </head>
 
