updated presentation script

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -94,13 +94,13 @@
                             <p>Technical Director</p>
                         </div>
                          <div class="team-member">
-                            <img src="/img/sam.jpg" class="team-photo">
+                            <img src="/img/sam1.jpg" class="team-photo">
                             <h2>Sam</h2>
                             <p>Managing Director</p>
                         </div>
 
                         <div class="team-member">
-                            <img src="/img/phil.jpg" class="team-photo">
+                            <img src="/img/phil1.jpg" class="team-photo">
                             <h2>Phil</h2>
                             <p>Creative Director</p>
                         </div>
