updated presentation ....again

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -52,6 +52,7 @@
 
                    <img src="/img/embark-logo.png" class="embark-logo">
 
+                   <p class="novalt web"> Visit thisisembark.com </p>
                 </section>
 
                 <section>
@@ -63,7 +64,7 @@
                 <section>
                     
                         <div class="product">
-                            <div class="product-item">
+                            <div id="web-item">
                             </div>
                             <h2 class="product-title">Digital</h2>
                                 <ul class="novalt">
@@ -76,7 +77,7 @@
                         </div>
 
                         <div class="product">
-                            <div class="product-item">
+                            <div id="exp-item">
                             </div>
                             <h2>Experiential</h2>
                                 <ul class="novalt">
@@ -87,7 +88,7 @@
                         </div>
 
                         <div class="product">
-                            <div class="product-item">
+                            <div id="video-item">
                             </div>
                             <h2>Production</h2>
                                  <ul class="novalt">
@@ -132,7 +133,7 @@
 
                 <section >
                     <h1 class="nova">How we're Different</h1>
-                    <ul >
+                    <ul class="novalt" >
                         <li>Latest technology</li>
                         <li>Polished Products</li>
                         <li>Transparent</li>
@@ -147,10 +148,10 @@
                 <section >
                     <h1 class="nova">Operations</h1>
 
-                    <ul>
+                    <ul class="novalt">
                         <li>Our Workflow</li>
                         <li>Location and Premises</li>
-                        <li>Transparent</li>
+                        <li>Equipment</li>
                     </ul>
 
 
