added icons to product slide

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -64,7 +64,7 @@
                 <section>
                     
                         <div class="product">
-                            <div id="web-item">
+                            <div id="web-item" class="product-item">
                             </div>
                             <h2 class="product-title">Digital</h2>
                                 <ul class="novalt">
@@ -77,7 +77,7 @@
                         </div>
 
                         <div class="product">
-                            <div id="exp-item">
+                            <div id="exp-item" class="product-item">
                             </div>
                             <h2>Experiential</h2>
                                 <ul class="novalt">
@@ -88,7 +88,7 @@
                         </div>
 
                         <div class="product">
-                            <div id="video-item">
+                            <div id="video-item" class="product-item">
                             </div>
                             <h2>Production</h2>
                                  <ul class="novalt">
