--- a/presentation/controls.html
+++ b/presentation/controls.html
@@ -17,6 +17,7 @@
         <link rel="stylesheet" href="css/reveal.css">
          <link rel="stylesheet" href="css/screen.css">
         <link rel="stylesheet" href="css/theme/embark.css" id="theme">
+         <script src="js/jquery.min.js"></script>
 
 </head>
 
@@ -30,8 +31,9 @@
 
         </div>
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-        <script src="/socket.io/socket.io.js"></script>
+        
+
+        <script src="js/socket.io.min.js"></script>
         <script type="text/javascript" src="js/retina.js"></script>
         <script src="js/main.js"></script>
 
