--- a/presentation/index.html
+++ b/presentation/index.html
@@ -6,8 +6,8 @@
 
         <title>Embark</title>
 
-        <meta name="description" content="A framework for easily creating beautiful presentations using HTML">
-        <meta name="author" content="Hakim El Hattab">
+        <meta name="description" content="Embark Start up pitch">
+        <meta name="author" content="Embark">
 
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -18,6 +18,7 @@
         <link rel="stylesheet" href="css/screen.css">
 
         <link rel="stylesheet" href="css/reveal.css">
+        <link rel="stylesheet" href="css/animate.css">
         
         <link rel="stylesheet" href="css/theme/embark.css" id="theme">
 
@@ -27,7 +28,8 @@
         <link rel="stylesheet" href="lib/css/zenburn.css">
         <!-- If the query includes 'print-pdf', use the PDF print sheet -->
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+        <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>-->
+        <script src="js/jquery.min.js"></script>
 
         <!--[if lt IE 9]>
         <script src="lib/js/html5shiv.js"></script>
@@ -41,8 +43,20 @@
 
 </head>
 
-<body>
-        <img src="/img/static-logo.png" class="static-logo" id="static">
+<body>  
+        <div id="overlay" class="hidden animated fadeIn">
+
+            <video id="video" >
+                <source src="tv.webm" type="video/ogg">
+                <source src="tv.ogg" type="video/webm">
+                <source src="tv.mp4" type="video/mp4">
+            </video>
+
+        </div>
+
+        
+        <img src="img/static-logo.png" class="static-logo" id="static">
+
         <div class="reveal">
 
             <!-- Any section element inside of this container is displayed as a slide -->
@@ -50,7 +64,7 @@
 
                 <section>
 
-                   <img src="/img/embark-logo.png" class="embark-logo">
+                   <img src="img/embark-logo.png" class="embark-logo">
 
                    <p class="novalt web"> Visit thisisembark.com </p>
                 </section>
@@ -103,18 +117,18 @@
                 <section>
                     <div class="team">
                         <div class="team-member">
-                            <img src="/img/chris.jpg" class="team-photo">
+                            <img src="img/chris.jpg" class="team-photo">
                             <h2>Chris</h2>
                             <p class="novalt">Technical Director</p>
                         </div>
                          <div class="team-member">
-                            <img src="/img/sam1.jpg" class="team-photo">
+                            <img src="img/sam1.jpg" class="team-photo">
                             <h2>Sam</h2>
                             <p class="novalt">Managing Director</p>
                         </div>
 
                         <div class="team-member">
-                            <img src="/img/phil1.jpg" class="team-photo">
+                            <img src="img/phil1.jpg" class="team-photo">
                             <h2>Phil</h2>
                             <p class="novalt">Creative Director</p>
                         </div>
@@ -161,23 +175,23 @@
 
                     <h1 class="nova">Monthly Finance</h1>
 
-                    <img src="/img/year-1.png">
+                    <img src="img/year-1.png">
 
                 </section>
 
                 <section>
                     <h1 class="nova">Break Even</h1>
 
-                    <img src="/img/break-even.png">
+                    <img src="img/break-even.png">
                 </section>
 
                 <section>
 
-                    <img src="/img/year1-3.png">
+                    <img src="img/year1-3.png">
                 </section>
 
                 <section>
-                    <h1>Questions</h1>
+                    <h1 class="nova">Questions</h1>
                 </section>
 
             </div>
@@ -186,7 +200,9 @@
 
         <script src="lib/js/head.min.js"></script>
         <script src="js/reveal.min.js"></script>
-        <script src="/socket.io/socket.io.js"></script>
+
+        <script src="js/socket.io.min.js"></script>
+
         <script type="text/javascript" src="js/retina.js"></script>
         <script src="js/main.js"></script>
         <script src="js/jquery.easing.1.3.js" type="text/javascript"></script>
