site/presentation for presentation

--- a/presentation/controls.html
+++ b/presentation/controls.html
@@ -26,7 +26,7 @@
 
             <div class="grav-button" id="gravity"> 
 
-                <p> Press </p>
+                <p class="novalt"> Press </p>
             </div>
 
         </div>
