fixed spelling mistake in presentation & updates section #7

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -144,7 +144,7 @@
 
                     <ul class="novalt">
                         
-                        <li>From 2007 to 2011 the UK internet share of advertising expendature rose 68%</li>
+                        <li>From 2007 to 2011 the UK internet share of advertising expenditure rose 68%</li>
                     </ul>
 
                 </section>
