updated node server to port 8081, changes ot main.js

--- a/presentation/controls.html
+++ b/presentation/controls.html
@@ -4,17 +4,17 @@
     <head>
         <meta charset="utf-8">
 
-        <title>Embark - Controls</title>
+        <title>Embark - Controls for Socket</title>
 
-        <meta name="description" content="A framework for easily creating beautiful presentations using HTML">
-        <meta name="author" content="Hakim El Hattab">
+        <meta name="description" content="Sockets activate button">
+        <meta name="author" content="Embark">
 
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-        <link rel="stylesheet" href="css/reveal.css">
+        
          <link rel="stylesheet" href="css/screen.css">
         <link rel="stylesheet" href="css/theme/embark.css" id="theme">
          <script src="js/jquery.min.js"></script>
@@ -26,7 +26,7 @@
 
             <div class="grav-button" id="gravity"> 
 
-                <p class="novalt"> Press </p>
+                <p class="novalt"> Click For Awesome </p>
             </div>
 
         </div>
